--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>com.github.ddm4j</groupId>
 	<artifactId>spring-boot-api-document</artifactId>
 	<name>spring-boot-api-document</name>
-	<version>2.1.0</version>
+	<version>2.1.1</version>
 	<packaging>jar</packaging>
 	<url>https://github.com/ddm4j/spring-boot-api-document</url>
 	<description>spring boot api document</description>
@@ -58,7 +58,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.4</version>
+				<!-- <version>2.10.4</version> -->
 				<configuration>
 					<encoding>UTF-8</encoding>
 					<aggregate>true</aggregate>
@@ -81,7 +81,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.1</version>
+				<!-- <version>3.0.1</version> -->
 				<executions>
 					<execution>
 						<id>attach-sources</id>
